join group
join a group as user
